# TelegramBotTemplate

./: README.md  config.json  load_config.py  main.py  pyproject.toml
filters/: __init__.py  is_admin.py
handlers/: __init__.py
handlers/admin/: __init__.py  check_users.py
handlers/groups/: __init__.py  message.py
handlers/private/: __init__.py  send_inline.py  start.py
keyboards/: inline.py  reply.py
middlewares/: __init__.py  is_user_saved.py
services/: __init__.py  database.py
states/: __init__.py  admin_states.py
utils/: __init__.py  logger.py
utils/markup_constructor/: __init__.py  base.py  inline.py  reply.py
