[tool.poetry]
name = "telegram_bot_template"
version = "0.1.0"
description = "Some template for the telegram bots."
authors = ["Svyatoslav <hedgehogdevelop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
